Add Rulebook page and PDF, update nav links

--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
       <div class="site-name">Shark Attack Gaming</div>
     </div>
     <nav>
-      <a href="https://battlefy.com/shark-attack-gaming" target="_blank" rel="noopener noreferrer">Battlefy</a>
+       <a href="https://battlefy.com/shark-attack-gaming" target="_blank" rel="noopener noreferrer">Battlefy</a>
+       <a href="/rulebook.html">Rulebook</a>
     </nav>
   </header>
 
